<resources>
    <string name="app_name">Dooyd</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="mobile_email">Mobile/Email</string>
    <string name="remember_me">Remember Me</string>
    <string name="have_an_account">Have an account?</string>
    <string name="login_here">Login Here</string>
    <string name="register_here">Register Now!</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="registration">Register</string>
    <string name="name">Name*</string>
    <string name="mobile">Mobile*</string>
    <string name="email">Email*</string>
    <string name="_password">Password*</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login now!</string>
    <string name="lost_your_password">Lost your password?</string>
    <string name="forgot_password">Forgot Password!</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="rupee_value">₹</string>
    <string name="forget_activity_label">Forget Password</string>
    <string name="update">Update</string>
    <string name="price">Price</string>
    <string name="availability">Availability</string>
    <string name="category">Category</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="add_to_whislist">Add to Whislist</string>
    <string name="chat_with_vendor">Chat With Vendor</string>
    <string name="view_cart">View Cart</string>
    <string name="logout">Logout</string>
    <string name="order_now">Order Now</string>
    <string name="check_out">Check Out</string>
    <string name="remove">Remove</string>

    <string name="quantity">Quantity : </string>
    <string name="over_quantity">This product has been sold out</string>

    <string-array name="tab_titles">
        <item>Home</item>
        <item>Cart</item>
        <item>Order</item>
        <item>Profile</item>
    </string-array>

    <integer-array name="tab_icons">
        <item>@drawable/ic_home_black_24dp</item>
        <item>@drawable/ic_shopping_cart_black_24dp</item>
        <item>@drawable/ic_shopping_basket_black_24dp</item>
        <item>@drawable/ic_person_black_24dp</item>
    </integer-array>


</resources>
