<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context="views.activities.RegistrationActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/registration_start_end_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
        >


            <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTextInputLayoutStyle"
                    android:id="@+id/regNameLayout"
                    android:layout_width="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="@dimen/registration_start_end_margin"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        style="@style/AppTextInputEditTextStyle"
                        android:id="@+id/regNameView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:maxLength="30"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTextInputLayoutStyle"
                    android:id="@+id/regMobileLayout"
                    android:layout_width="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/regNameLayout"
                    android:layout_margin="@dimen/registration_start_end_margin"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        style="@style/AppTextInputEditTextStyle"
                        android:id="@+id/regMobileView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobile"
                        android:inputType="phone"
                        android:maxLength="15"
                />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTextInputLayoutStyle"
                    android:id="@+id/regEmailLayout"
                    android:layout_width="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/regMobileLayout"
                    android:layout_margin="@dimen/registration_start_end_margin"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        style="@style/AppTextInputEditTextStyle"
                        android:id="@+id/regEmailView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="text"
                        android:maxLength="40"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    style="@style/AppTextInputLayoutStyle"
                    android:id="@+id/regPasswordLayout"
                    android:layout_width="0dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/regEmailLayout"
                    android:layout_margin="@dimen/registration_start_end_margin"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                        style="@style/AppTextInputEditTextStyle"
                        android:id="@+id/regPasswordView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/_password"
                        android:inputType="textWebPassword"
                        android:maxLength="20"
                />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                    android:id="@+id/registerButton"
                    style="@style/AppButtonStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.08"
                    app:backgroundTint="@color/colorAccent"
                    android:text="@string/registration"
                    app:layout_constraintTop_toBottomOf="@id/regPasswordLayout"
                    android:layout_marginTop="@dimen/registration_start_end_margin"
                    android:layout_width="0dp"
                    app:layout_constraintWidth_percent="0.4"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/login_now_label"
                    android:text="@string/already_have_an_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/registerButton"
                    android:layout_marginTop="@dimen/login_startEndMargin"
                    app:layout_constraintStart_toStartOf="@id/registerButton"
            />

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/login_now_view"
                    android:text="@string/login_now"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintTop_toBottomOf="@id/registerButton"
                    android:layout_marginTop="@dimen/login_startEndMargin"
                    app:layout_constraintStart_toEndOf="@id/login_now_label"
                    android:layout_marginStart="@dimen/login_ViewJoinMargin"
                    android:layout_marginLeft="@dimen/login_ViewJoinMargin"
            />


            <ProgressBar
                    android:id="@+id/regProgressBar"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
