<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <FrameLayout
            android:id="@+id/fl_parent"
            android:layout_width="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/colorPrimary"
            android:layout_height="45dp">

        <TextView
                android:text="Profile"
                android:textSize="25sp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:layout_height="wrap_content"/>

    </FrameLayout>


    <LinearLayout
            android:id="@+id/ll_parent"
            android:layout_width="0dp" android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fl_parent"
            android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
                style="@style/AppTextInputLayoutStyle"
                android:id="@+id/profileNameLayout"
                android:layout_width="match_parent"
                app:boxBackgroundMode="filled"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/registration_start_end_margin"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppTextInputEditTextStyle"
                    android:id="@+id/profileNameView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:paddingLeft="6dp"
                    android:paddingStart="6dp"
                    android:paddingRight="6dp"
                    android:paddingEnd="6dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/AppTextInputLayoutStyle"
                android:id="@+id/profileMobileLayout"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileNameLayout"
                app:boxBackgroundMode="filled"
                android:layout_margin="@dimen/registration_start_end_margin"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppTextInputEditTextStyle"
                    android:id="@+id/profileMobileView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/mobile"
                    android:inputType="text"
                    android:paddingLeft="6dp"
                    android:paddingStart="6dp"
                    android:paddingRight="6dp"
                    android:paddingEnd="6dp"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/AppTextInputLayoutStyle"
                android:id="@+id/profileEmailLayout"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:boxBackgroundMode="filled"
                android:layout_margin="@dimen/registration_start_end_margin"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppTextInputEditTextStyle"
                    android:id="@+id/profileEmailView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="text"
                    android:enabled="false"
                    android:paddingLeft="6dp"
                    android:paddingStart="6dp"
                    android:paddingRight="6dp"
                    android:paddingEnd="6dp"
            />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                style="@style/AppTextInputLayoutStyle"
                android:id="@+id/profilePasswordLayout"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profileEmailLayout"
                app:boxBackgroundMode="filled"
                android:layout_margin="@dimen/registration_start_end_margin"
                android:visibility="gone"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    style="@style/AppTextInputEditTextStyle"
                    android:id="@+id/profilePasswordView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/_password"
                    android:inputType="text"
                    android:paddingLeft="6dp"
                    android:paddingStart="6dp"
                    android:paddingRight="6dp"
                    android:paddingEnd="6dp"/>

        </com.google.android.material.textfield.TextInputLayout>



    </LinearLayout>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/logoutButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/updateButton"
            app:backgroundTint="@color/colorAccent"
            android:text="@string/logout"
            app:layout_constraintTop_toBottomOf="@id/ll_parent"
            android:background="@null"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="@dimen/registration_start_end_margin"
            android:layout_width="0dp"
            android:layout_height="45dp"/>

    <com.google.android.material.button.MaterialButton
            android:id="@+id/updateButton"
            style="@style/AppButtonStyle"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="15dp"
            app:layout_constraintHorizontal_bias="0.05"
            app:backgroundTint="@color/colorAccent"
            android:text="@string/update"
            android:layout_gravity="right"
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toBottomOf="@id/ll_parent"
            android:layout_marginTop="@dimen/registration_start_end_margin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>

    <ProgressBar
            android:id="@+id/progressProfile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>



</androidx.constraintlayout.widget.ConstraintLayout>